# The-Market-Pulse

./: docker-compose.yml
.agent/rules/: code-guide-style.md
.agent/skills/code-reviewer/: SKILL.md
.agent/skills/codebase-cleanup-refactor-clean/: SKILL.md
.agent/skills/uv-package-manager/: SKILL.md
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 16546df84b7a_add_chat_models.py  5253249be3a6_add_user_s_table.py  682067a9b8e8_update_user_table.py  a118f2983f58_add_candle_model.py  c1b86cfe6373_add_blog_models_and_user_profile_fields.py
backend/src/: main.py  models.py  router.py
backend/src/ai/: agent.py  models.py  router.py  schemas.py  test_ai.py  tools.py
backend/src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  security.py  utils.py
backend/src/blog/: exceptions.py  models.py  router.py  schemas.py  search.py  service.py
backend/src/core/: base_model.py  config.py  constants.py  dependencies.py  pagination.py
backend/src/market/: constants.py  exceptions.py  models.py  provider.py  router.py  schemas.py  service.py
backend/src/utils/: datetime_util.py  generate_strings.py  markdown.py  og_meta.py  slug.py
backend/tests/: test_ai.py  test_auth.py  test_market.py  test_utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  blog.js  chat.js  client.js  market.js
frontend/src/components/chat/: Chat.css  (+1 more)
frontend/src/pages/: Pages.css
frontend/src/stores/: authStore.js
(+18 files in other folders)
